--- a/WebContent/endereco/pais/index.xhtml
+++ b/WebContent/endereco/pais/index.xhtml
@@ -42,7 +42,7 @@
 						<h:outputText value="#{pais.nome}" />
 					</p:column>
 					<p:column style="width:10%;text-align: center;" headerText="Ação">
-						<p:commandButton id="selectButton" update=":form:panel"
+						<p:commandButton id="selectButton" update=":form"
 							actionListener="#{paisBean.prepararAlterarPais(pais)}"
 							icon="ui-icon-pencil" title="View">
 						</p:commandButton>
